--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
 @import url("styles/topicos.css");
 @import url("styles/contato.css");
 @import url("styles/rodapé.css");
+@import url("styles/formulario.css");
+@import url("styles/cadastro.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
@@ -16,9 +18,11 @@
     --preto: #000000;
     --cinza: #474646;
     --cinza-claro: #858585;
+    --vermelho: #D94937;
 }
 
 body {
+    /* background-color: var(--branco); */
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte-principal);
     font-size: 16px;
