--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,8 +1,12 @@
-.banner {
+.banner, .banner_cadastro {
     background: var(--azul-degrade);
     color: var(--branco);
     text-align: center;
     padding: 2.5em 2em;
+}
+
+.banner_cadastro {
+    padding: 1em;
 }
 
 .banner__titulo {
