--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,700;1,400&display=swap');
 @import url("styles/header.css");
 @import url("styles/banner.css");
 @import url("styles/carrossel.css");
@@ -6,6 +7,7 @@
 @import url("styles/rodapé.css");
 @import url("styles/formulario.css");
 @import url("styles/cadastro.css");
+@import url("styles/melhores-livros.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
